syntax = "proto3";

package stockbit;

//protoc --go_out=plugins=grpc:. handler/grpc/proto/stockbit.proto

option go_package = "handler/grpc/proto";


service stockbit {
    rpc GetOneMovie(GetOneMovieRequest) returns (GetOneMovieResponse) {}
    rpc SearchMovie(SearchMovieRequest) returns (SearchMovieResponse) {}
  
}

message GetOneMovieRequest {
    string Id = 1;
}

message GetOneMovieResponse {
    string  Title =1;
    string	Year = 2;
	string Rated = 3;
	string Released= 4;
	string Runtime = 5;
	string Genre = 6;
	string Director = 7;
	string Writer = 8;
	string Actors = 9;
	string Plot = 10;
	string Language = 11;
	string Country = 12;
	string Awards = 13;
	string Poster = 14;
	repeated Rating  Ratings =15;
	string Metascore = 16;
	string ImdbRating = 17;
	string ImdbID = 18;
	string Type = 19;
	string DVD = 20;
	string BoxOffice = 21;
	string Production = 22;
	string Website = 23;
	string Response = 24;
}

message Rating {
	string Source = 1;
	string Value = 2;
}

message SearchMovieRequest{
    string Key = 1;
    string Page = 2;

}

message SearchMovieResponse  {
	repeated MovieSummary Search = 1;
	string TotalResults= 2;
	string Response= 3;
}

message MovieSummary  {
	string Title= 1;
	string Year= 2;
	string ImdbID= 3;
	string Type= 4;
	string Poster= 5;
}
